2011-07-06  Corinna Vinschen  <corinna@vinschen.de>

	* sigproc.cc (wait_sig): Fix debug output.

2011-07-05  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (fhandler_console::input_tcsetattr): Make
	ENABLE_PROCESSED_INPUT flag only depending on value of IGNBRK.
	(fhandler_console::tcgetattr): Don't set ISIG depending on
	ENABLE_PROCESSED_INPUT, set IGNBRK instead.

2011-07-05  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (get_file_sd): Fix comment.

2011-07-05  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Never create files with WRITE_DAC
	access.  Explain why.
	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Improve debug
	output.

2011-07-05  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Don't open file with WRITE_DAC
	access on remote filesystem.  Explain why.
	* fhandler_disk_file.cc (fhandler_disk_file::mkdir): Ditto for
	directories.
	* fhandler_socket.cc (fhandler_socket::bind): Ditto for sockets.
	* path.cc (symlink_worker): Ditto for symlinks.

2011-07-04  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* environ.cc (tty_is_gone): Wrap warning at 80 characters.

2011-07-04  Corinna Vinschen  <corinna@vinschen.de>

	Throughout, open console handles with sharing for reading and writing.
	* dcrt0.cc (insert_file): Open file with full sharing allowed.
	* hookapi.cc (find_first_notloaded_dll): Ditto.
	* spawn.cc (av::fixup): Ditto.

2011-07-04  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::init_std_file_from_handle): Change test for console
	device in call to fh->init to avoid conhost crash on W7.

2011-07-04  Corinna Vinschen  <corinna@vinschen.de>

	* environ.cc (environ_init): Reinstantiate on-the-fly CYGWIN variable
	test and call to parse_options if found.

2011-07-04  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.cc (fhandler_base::open_with_arch): Call close_on_exec last
	to avoid setting close_on_exec for archetype.